bevy_asset_loader/tests/ui/missing_texture_atlas_attributes.stderr
error: Field is missing asset attributes: texture_atlas/cell_width, texture_atlas/cell_height, texture_atlas/rows
  --> $DIR/missing_texture_atlas_attributes.rs:8:5
   |
8  | /     #[asset(texture_atlas(columns = 2))]
9  | |     #[asset(path = "test.png")]
10 | |     test: Handle<TextureAtlas>
   | |______________________________^
